admin_header 変更

--- a/src/com/internousdev/kairakutenichiba/property/admin_header_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/admin_header_ja.properties
@@ -3,5 +3,5 @@ lang.admin.header_btn = \u30c8\u30c3\u30d7
 lang.admin_header_userbtn = \u9867\u5ba2\u60c5\u5831
 lang.admin_header_historybtn = \u8ca9\u58f2\u5c65\u6b74
 lang.admin_header_Itembtn = \u5546\u54c1\u7ba1\u7406
-lang.admin_header_customerbtn = \u304a\u554f\u3044\u5408\u308f\u305b
-lang.header_loginbtn = \u30ed\u30b0\u30a4\u30f3
+lang.admin_header_customerbtn = \u304A\u554F\u3044\u5408\u308F\u305B
+lang.header_logoutbtn = \u30ED\u30B0\u30A2\u30A6\u30C8
