jspをプロパティ情報で置き換え

--- a/src/com/internousdev/kairakutenichiba/property/payment_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/payment_ja.properties
@@ -1,12 +1,8 @@
-lang.payment.paymentScreen=\u304A\u652F\u6255\u3044\u753B\u9762
+
 lang.payment.fillin=\u4EE5\u4E0B\u306E\u9805\u76EE\u3092\u3054\u8A18\u5165\u304F\u3060\u3055\u3044
-
-
 lang.payment.cardHankaku=\uFF08\u534A\u89D2\u6570\u5B5715\u301C16\u6841\uFF09
 lang.payment.anExample=\u4F8B
-
 lang.payment.romanLetter=\u534A\u89D2\u30ED\u30FC\u30DE\u5B57
-
 lang.payment.securityCode=\u30BB\u30AD\u30E5\u30EA\u30C6\u30A3\u30B3\u30FC\u30C9
 lang.payment.securityHankaku=\u534A\u89D2\u6570\u5B573\u301C4\u6841
 lang.payment.whatIsSecurityCode=\u30BB\u30AD\u30E5\u30EA\u30C6\u30A3\u30B3\u30FC\u30C9\u3068\u306F\uFF1F
@@ -18,6 +14,7 @@ lang.payment.toTheOrderConfirmationScreen=\u6CE8\u6587\u78BA\u8A8D\u753B\u9762\u
 lang.payment.payment=\u304A\u652F\u6255\u3044
 
 
+lang.payment.paymentScreen=\u304A\u652F\u6255\u3044\u753B\u9762
 lang.payment.cardinfo=\u30AB\u30FC\u30C9\u60C5\u5831\u306E\u5165\u529B
 lang.payment.attention=\u304A\u652F\u6255\u3044\u65B9\u6CD5\u306F\u30AF\u30EC\u30B8\u30C3\u30C8\u30AB\u30FC\u30C9\u306E\u307F\u3068\u306A\u308A\u307E\u3059\u3002
 lang.payment.security=\u30BB\u30AD\u30E5\u30EA\u30C6\u30A3\u30FC\u30B3\u30FC\u30C9 \uFF3B\u5FC5\u9808\uFF3D
@@ -28,7 +25,12 @@ lang.payment.cardType= \u30AB\u30FC\u30C9\u4F1A\u793E\u306E\u9078\u629E \u3000\u
 
 lang.payment.attention=\u534A\u89D2\u30AB\u30CA\u30FB\u5168\u89D2\u82F1\u6570\u6587\u5B57\u306F\u3001\u4F7F\u7528\u3057\u306A\u3044\u3067\u304F\u3060\u3055\u3044\u3002
 lang.payment.howtopay=\u304A\u652F\u6255\u3044\u65B9\u6CD5\u306F\u30AF\u30EC\u30B8\u30C3\u30C8\u30AB\u30FC\u30C9\u306E\u307F\u3068\u306A\u308A\u307E\u3059\u3002
-
+lang.payment.deliverselect=\u914D\u9054\u65B9\u6CD5\u306E\u9078\u629E
 lang.payment.deliver=\u914D\u9001\u65B9\u6CD5\uFF3B\u5FC5\u9808\uFF3D
+lang.payment.delivercost=\u914D\u9001\u6599\u91D1\u30FB\u30FB\u30FB\u5B85\u914D\u4FBF500\u5186(\u7A0E\u8FBC)\u3000\u30E1\u30FC\u30EB\u4FBF200\u5186(\u7A0E\u8FBC)
+lang.payment.date=\u304A\u5C4A\u3051\u65E5\u6307\u5B9A\uFF3B\u5FC5\u9808\uFF3D
+lang.payment.time=\u304A\u5C4A\u3051\u6642\u9593\u6307\u5B9A\uFF3B\u5FC5\u9808\uFF3D
+lang.payment.bike=\u5B85\u914D\u4FBF
+lang.payment.mail=\u30E1\u30FC\u30EB\u4FBF
 
 
