--- a/src/com/internousdev/kairakutenichiba/property/cart_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/cart_en.properties
@@ -12,3 +12,4 @@ lang.cart.subtotal=Subtotal
 lang.cart.yen=Yen
 lang.cart.total=Total
 lang.cart.message3=If you still continue to shop here
+lang.cart.message4=Proceed to the purchase
