--- a/src/com/internousdev/kairakutenichiba/property/cart_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/cart_ja.properties
@@ -12,3 +12,4 @@ lang.cart.subtotal=\u5C0F\u8A08
 lang.cart.yen=\u5186
 lang.cart.total=\u5408\u8A08
 lang.cart.message3=\u307E\u3060\u8CB7\u3044\u7269\u3092\u7D9A\u3051\u308B\u5834\u5408\u306F\u3053\u3061\u3089\u3078
+lang.cart.message4=\u8CFC\u5165\u624B\u7D9A\u304D\u306B\u9032\u3080
