購入完了画面と、カートが空の画面を国際化した。荘司。

--- a/src/com/internousdev/kairakutenichiba/property/finish_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/finish_en.properties
@@ -1,4 +1,7 @@
-lang.finish_shoji.title=Finish
-lang.finish_shoji.h1=Thank you
-lang.finish_shoji.countdown=\u203B Go to Top page auto after 3 seconds
-lang.finish_shoji.toppage=Go to Top page now
+lang.finish.title=Finish
+lang.finish.h1=Thank you
+lang.finish.countdown=\u203B Go to Top page auto after 3 seconds
+lang.finish.toppage=Go to Top page now
+
+
+struts.ui.theme=simple
