・いらないjspファイルdummy.jspとcategory.jspの削除 ・struts.xmlにproperty記述 ・記述のないjspにfmt:setBundleでproperty関連付け ・文字列ベタ打ちのjspを<s:text>で置き換え ・存在しないpropertyファイルを作成。

--- a/src/com/internousdev/kairakutenichiba/property/account_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/account_ja.properties
@@ -1,2 +1,7 @@
 lang.mypage.user=\u5feb\u697d\u7684\u767b\u9332\u60c5\u5831\u53c2\u7167
 lang.mypage.history=\u5feb\u697d\u6b74\u53f2
+lang.mypage.word=\u3075\u308A\u304C\u306A
+lang.mypage.name=\u6C0F\u540D
+lang.mypage.address=\u4F4F\u6240
+lang.mypage.phonenumber=\u96FB\u8A71\u756A\u53F7
+lang.mypage.mail=\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
