--- a/src/com/internousdev/kairakutenichiba/property/admin_customer_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/admin_customer_en.properties
@@ -1,13 +1,13 @@
-lang.admin_customer.title = kairakutenichiba-Account Detail
-lang.admin_customer.header1 = Acount detail
-lang.admin_customer.userId = UserID
-lang.admin_customer.NameKanji = Name(Kanji or Alphabet)
-lang.admin_customer.NameKana = Name(Hiragana)
-lang.admin_customer.postal = Postcode
-lang.admin_customer.address = Address
-lang.admin_customer.phoneNumber = Phone number
-lang.admin_customer.email = E-mail Address
-lang.admin_customer.mobileNumber = Mobilephone Number
-lang.admin_customer.mobileEmail = Mobilephone E-mail Adderss
-lang.admin_customer.sex = Gender
-lang.admin_customer.birthday = Date of Birth
+lang.admincustomer.title = kairakutenichiba-Account Detail
+lang.admincustomer.header1 = Acount detail
+lang.admincustomer.userId = UserID
+lang.admincustomer.NameKanji = Name(Kanji or Alphabet)
+lang.admincustomer.NameKana = Name(Hiragana)
+lang.admincustomer.postal = Postcode
+lang.admincustomer.address = Address
+lang.admincustomer.phoneNumber = Phone number
+lang.admincustomer.email = E-mail Address
+lang.admincustomer.mobileNumber = Mobilephone Number
+lang.admincustomer.mobileEmail = Mobilephone E-mail Adderss
+lang.admincustomer.sex = Gender
+lang.admincustomer.birthday = Date of Birth
