--- a/src/com/internousdev/kairakutenichiba/property/history_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/history_ja.properties
@@ -1,9 +1,8 @@
-lang.rireki.topTitle = \u5feb\u697d\u6b74\u53f2
-lang.rireki.h1title = \u5feb\u697d\u6b74\u53f2
-lang.rireki.a = \u3053\u3061\u3089\u306b\u306f\u904e\u53bb\u306b\u8caa\u3063\u305f\u5feb\u697d\u304c\u8868\u793a\u3055\u308c\u307e\u3059
-lang.rireki.b = \u30ef\u30f3\u30d4\u30fc\u30b9 1\u5dfb
-lang.rireki.c = \u5c3e\u7530\u6804\u4e00\u90ce
-lang.rireki.d = \u96c6\u82f1\u793e
-lang.rireki.e = 500\u5186
-lang.rireki.f = \u30ef\u30f3\u30d4\u30fc\u30b9 2\u5dfb
-lang.rireki.g =\u9589\u3058\u308b
+lang.history.title=\u5FEB\u697D\u6B74\u53F2
+lang.history.explanation=\u3053\u3061\u3089\u306B\u306F\u904E\u53BB\u306B\u8CAA\u3063\u305F\u5FEB\u697D\u304C\u8868\u793A\u3055\u308C\u307E\u3059
+lang.history.name=\u5546\u54C1\u540D
+lang.history.author=\u8457\u8005\u540D
+lang.history.price=\u5024\u6BB5
+lang.history.buyday=\u8CFC\u5165\u65E5
+lang.history.dayonsale=\u8CA9\u58F2\u65E5
+lang.history.quantity=\u8CA9\u58F2\u500B\u6570
