--- a/src/com/internousdev/kairakutenichiba/property/index_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/index_ja.properties
@@ -1,16 +1,8 @@
-
-
-
-lang.toppage_error.pagetitle=トードエラー。快楽天市場
-lang.toppage_error.text=トップページの読み込みに失敗しました。少々お待ちになった上で再度お試しください。
-lang.toppage_error.btn=再試行
-
-
-
-lang.toppage.pagetitle=快楽天市場
-lang.toppage.subtitle=<span class="title_sub">気持ちイィ<font color="orange">ひとときぃ</font><font color="green">ご提供しますぅ</span><br>
-lang.toppage.items=商品一覧
-
-
-
-
+lang.index.title=\u5FEB\u697D\u5929\u5E02\u5834\u30C8\u30C3\u30D7
+lang.index.boymanga= \u5C11\u5E74\u30DE\u30F3\u30AC 
+lang.index.girlmanga= \u5C11\u5973\u30DE\u30F3\u30AC 
+lang.index.lightnovel= \u30E9\u30A4\u30C8\u30CE\u30D9\u30EB 
+lang.index.novel= \u6587\u5EAB\u672C 
+lang.index.magazine= \u96D1\u8A8C 
+lang.index.recommandgoods=\u4ECA\u6708\u306E\u304A\u3059\u3059\u3081\u5546\u54C1
+lang.index.gototop=\u25B2\u30C8\u30C3\u30D7\u3078
