--- a/src/com/internousdev/kairakutenichiba/property/admin_customer_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/admin_customer_ja.properties
@@ -1,12 +1,12 @@
-lang.admin_customer.topTitle = \u7ba1\u7406\u8005\u753b\u9762 \u9867\u5ba2\u60c5\u5831
-lang.admin_customer.h1title = \u7ba1\u7406\u8005\u753b\u9762 \u9867\u5ba2\u60c5\u5831
-lang.admin_customer.id = \u30E6\u30FC\u30B6\u30FCID
-lang.admin_customer.userName = \u6c0f\u540d
-lang.admin_customer.password = \u30d1\u30b9\u30ef\u30fc\u30c9
-lang.admin_customer.email = \u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9
-lang.admin_customer.PhoneNumber=\u96FB\u8A71\u756A\u53F7
-lang.admin_customer.postal = \u90F5\u4FBF\u756A\u53F7
-lang.admin_customer.streetaddress = \u4f4f\u6240
-lang.admin_customer.dt = \u767b\u9332\u65e5
-lang.admin_customer.update = \u66f4\u65b0\u65e5
-lang.admin_customer.Sex=\u6027\u5225
+lang.admincustomer.topTitle = \u7ba1\u7406\u8005\u753b\u9762 \u9867\u5ba2\u60c5\u5831
+lang.admincustomer.h1title = \u7ba1\u7406\u8005\u753b\u9762 \u9867\u5ba2\u60c5\u5831
+lang.admincustomer.id = \u30E6\u30FC\u30B6\u30FCID
+lang.admincustomer.userName = \u6c0f\u540d
+lang.admincustomer.password = \u30d1\u30b9\u30ef\u30fc\u30c9
+lang.admincustomer.email = \u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9
+lang.admincustomer.PhoneNumber=\u96FB\u8A71\u756A\u53F7
+lang.admincustomer.postal = \u90F5\u4FBF\u756A\u53F7
+lang.admincustomer.streetaddress = \u4f4f\u6240
+lang.admincustomer.dt = \u767b\u9332\u65e5
+lang.admincustomer.update = \u66f4\u65b0\u65e5
+lang.admincustomer.Sex=\u6027\u5225
