--- a/src/com/internousdev/kairakutenichiba/property/admin_history_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/admin_history_ja.properties
@@ -1,3 +1,4 @@
+lang.admin_history.toptitle=\u7BA1\u7406\u8005\u8CA9\u58F2\u5C65\u6B74
 lang.admin_history.title=\u8CA9\u58F2\u5C65\u6B74
 lang.admin_history.search=\u5546\u54C1ID\u3067\u691C\u7D22
 lang.admin_history.itemname=\u5546\u54C1\u540D
