--- a/src/com/internousdev/kairakutenichiba/property/detail_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/detail_ja.properties
@@ -1,4 +1,9 @@
-lang.detail_yamaguchi.title=\u5546\u54C1\u8A73\u7D30\u753B\u9762
-lang.detail_yamaguchi.price=\u4FA1\u683C
-lang.detail_yamaguchi.addtocart=\u30AB\u30FC\u30C8\u306B\u5546\u54C1\u3092\u8FFD\u52A0
-lang.detail_yamaguchi.info=\u5546\u54C1\u60C5\u5831
+lang.detail.title=\u5546\u54C1\u8A73\u7D30
+lang.detail.price=\u4FA1\u683C
+lang.detail.baseinfo=\u5546\u54C1\u57FA\u672C\u60C5\u5831
+lang.detail.dayonsale=\u767A\u58F2\u65E5\u3000\u3000\uFF1A
+lang.detail.author=\u8457\u8005\u3000\u3000\u3000\uFF1A
+lang.detail.company=\u51FA\u7248\u793E\u3000\u3000\uFF1A
+lang.detail.waytopublish=\u767A\u884C\u5F62\u614B\u3000\uFF1A
+lang.detail.page=\u30DA\u30FC\u30B8\u6570\u3000\uFF1A
+lang.detail.ISBNcode=ISBN\u30B3\u30FC\u30C9\uFF1A
