--- a/src/com/internousdev/kairakutenichiba/property/mypage_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/mypage_ja.properties
@@ -1,2 +1,3 @@
-lang.mypage.user=\u5feb\u697d\u7684\u767b\u9332\u60c5\u5831\u53c2\u7167
-lang.mypage.history=\u5feb\u697d\u6b74\u53f2
+lang.mypage.title=\u30DE\u30A4\u30DA\u30FC\u30B8
+lang.mypage.info=\u5FEB\u697D\u7684\u767B\u9332\u60C5\u5831\u53C2\u7167
+lang.mypage.history=\u5FEB\u697D\u6B74\u53F2
