help系統以外のプロパティファイル名、内部記述、jspのアンダーバーを削除。 及び再整理

--- a/src/com/internousdev/kairakutenichiba/property/check_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/check_en.properties
@@ -1,8 +1,8 @@
-lang.check_shoji.title=Check
-lang.check_shoji.h1=Check
-lang.check_shoji.shiharai=How to pay
-lang.check_shoji.delivery=How to delivery
-lang.check_shoji.when=When deliver
-lang.check_shoji.decide=Check and Decide
-lang.check_shoji.cart=return to cart
-lang.check_shoji.shiharai=return to how to pay
+lang.check.title=Check
+lang.check.h1=Check
+lang.check.shiharai=How to pay
+lang.check.delivery=How to delivery
+lang.check.when=When deliver
+lang.check.decide=Check and Decide
+lang.check.cart=return to cart
+lang.check.shiharai=return to how to pay
