--- a/src/com/internousdev/kairakutenichiba/property/detail_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/detail_en.properties
@@ -1,4 +1,4 @@
-lang.detail_yamaguchi.title=Detail
-lang.detail_yamaguchi.price=Price
-lang.detail_yamaguchi.addtocart=Add this to Cart
-lang.detail_yamaguchi.info=This Item's Infomation
+lang.detail.title=Detail
+lang.detail.price=Price
+lang.detail.addtocart=Add this to Cart
+lang.detail.info=This Item's Infomation
