・JSPの国際化のために文字をs:textですべて置き換えた。・property_enをすべて作成した。

--- a/src/com/internousdev/kairakutenichiba/property/admincustomer_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/admincustomer_en.properties
@@ -1,13 +1,12 @@
-lang.admincustomer.title = kairakutenichiba-Account Detail
-lang.admincustomer.header1 = Acount detail
-lang.admincustomer.userId = UserID
-lang.admincustomer.NameKanji = Name(Kanji or Alphabet)
-lang.admincustomer.NameKana = Name(Hiragana)
-lang.admincustomer.postal = Postcode
-lang.admincustomer.address = Address
-lang.admincustomer.phoneNumber = Phone number
-lang.admincustomer.email = E-mail Address
-lang.admincustomer.mobileNumber = Mobilephone Number
-lang.admincustomer.mobileEmail = Mobilephone E-mail Adderss
-lang.admincustomer.sex = Gender
-lang.admincustomer.birthday = Date of Birth
+lang.admincustomer.topTitle = Customer Infromation Manegement Page
+lang.admincustomer.h1title = Customer Infromation Manegement Page
+lang.admincustomer.id = User ID
+lang.admincustomer.userName = Name
+lang.admincustomer.password = Password
+lang.admincustomer.email = Mail Address
+lang.admincustomer.PhoneNumber=PhoneNumber
+lang.admincustomer.postal = Postal Number
+lang.admincustomer.streetaddress = Strret Address
+lang.admincustomer.dt = Registration day
+lang.admincustomer.update = Last Uptodate day
+lang.admincustomer.Sex= Sex
