--- a/src/com/internousdev/kairakutenichiba/property/adminheader_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/adminheader_en.properties
@@ -1,7 +1,6 @@
-lang.admincontact.topTitle = header
-lang.adminheader.btn = top
-lang.adminheader.userbtn = user
-lang.adminheader.historybtn = history
-lang.adminheader.Itembtn = item
-lang.adminheader.customerbtn = customere
-lang.header.loginbtn = login
+lang.adminheader.btn = Toppage
+lang.adminheader.userbtn =Customer Information
+lang.adminheader.historybtn = Sale history
+lang.adminheader.Itembtn = Item Management
+lang.adminheader.customerbtn = Ask Question
+lang.header.logoutbtn = Logout
