--- a/src/com/internousdev/kairakutenichiba/property/check_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/check_en.properties
@@ -1,8 +1,15 @@
-lang.check.title=Check
-lang.check.h1=Check
-lang.check.shiharai=How to pay
-lang.check.delivery=How to delivery
-lang.check.when=When deliver
-lang.check.decide=Check and Decide
-lang.check.cart=return to cart
-lang.check.shiharai=return to how to pay
+lang.check.title=Purchase confirmation
+lang.check.check=Check item you want to buy
+lang.check.goodsname=Item name
+lang.check.value=Price
+lang.check.quantitiy=Quantitiy
+lang.check.payment=How to pay
+lang.check.cardexample=VISA  \u30AB\u30FC\u30C9\u756A\u53F7 **** **** **** 1234
+lang.check.deliver=How to deliver
+lang.check.kuroneko=BLACKCAT
+lang.check.address=Street Address
+lang.check.addressex=example
+lang.check.decision=Order Confirmation
+lang.check.notfinish=not done
+lang.check.backtocart=Back to cart
+lang.check.backtoselect=Back to how to pay
