--- a/src/com/internousdev/kairakutenichiba/property/detail_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/detail_en.properties
@@ -1,4 +1,9 @@
-lang.detail.title=Detail
+lang.detail.title=ItemDetail
 lang.detail.price=Price
-lang.detail.addtocart=Add this to Cart
-lang.detail.info=This Item's Infomation
+lang.detail.baseinfo=ItemBaseInformation
+lang.detail.dayonsale=Sale day   :
+lang.detail.author=Author   :
+lang.detail.company=Publisher   :
+lang.detail.waytopublish=Publication form   :
+lang.detail.page=Page   :
+lang.detail.ISBNcode=ISBN code   :
