--- a/src/com/internousdev/kairakutenichiba/property/helplink_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/helplink_en.properties
@@ -1,4 +1,3 @@
-lang.help.title=inquiry
-lang.help.a=You inquiry is Complete!
-lang.help.b=Transmissionerror
-struts.ui.theme=simple
+lang.helplink.title=Help & Question
+lang.helplink.success=success to send
+lang.helplink.error=failure to send
