--- a/src/com/internousdev/kairakutenichiba/property/history_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/history_en.properties
@@ -1,9 +1,8 @@
-lang.rireki.topTitle = kairakuhistory
-lang.rireki.h1title = kairakuhistory
-lang.rireki.a = This is heaven before display
-lang.rireki.b = \u30ef\u30f3\u30d4\u30fc\u30b9 1\u5dfb
-lang.rireki.c = \u5c3e\u7530\u6804\u4e00\u90ce
-lang.rireki.d = \u96c6\u82f1\u793e
-lang.rireki.e = 500\u5186
-lang.rireki.f = \u30ef\u30f3\u30d4\u30fc\u30b9 2\u5dfb
-lang.rireki.g =close
+lang.history.title=Hisotroy of KAIRAKU
+lang.history.explanation=There are the History of you have taken
+lang.history.name=ItemID
+lang.history.author=Author
+lang.history.price=Price
+lang.history.buyday=Buy day
+lang.history.dayonsale=Sale day
+lang.history.quantity=Sale Quantitiey
