--- a/src/com/internousdev/kairakutenichiba/property/index_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/index_en.properties
@@ -1,17 +1,8 @@
-
-
-lang.toppage_error.pagetitle=Loading Error - Kairakutenichiba
-lang.toppage_error.text=Sorry, we failed loading toppage. Reload after waiting for a few minute please.
-lang.toppage_error.btn=Reload
-
-lang.toppage.title=Kairakutenichiba - Top Page
-lang.toppage.subtitle=<span class="title_sub">- Good <font color="orange">Book </font>for You! -</span><br>
-
-lang.toppage.column=Column
-lang.toppage.linktocolumn=Please Click <a href="column.jsp">Here</a>
-lang.toppage.items=Items
-
-
-
-
-
+lang.index.title=TopaPage
+lang.index.boymanga= Boy's Manga
+lang.index.girlmanga= Girl's Manga
+lang.index.lightnovel= LightNovel
+lang.index.novel= Novel
+lang.index.magazine= Magazine
+lang.index.recommandgoods=Recommanded Item in this month
+lang.index.gototop=\u25B2Back to Top
