--- a/src/com/internousdev/kairakutenichiba/property/mypage_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/mypage_en.properties
@@ -1,2 +1,3 @@
-lang.mypage.user=Membership information
-lang.mypage.history=Purchase history
+lang.mypage.title=Mypage
+lang.mypage.info=Show Registration User Information
+lang.mypage.history=KAIRAKU History
