--- a/src/com/internousdev/kairakutenichiba/property/help_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/help_en.properties
@@ -1,16 +1,19 @@
-lang.help.title=inquiry
-lang.help.heading=inquiry Method
-lang.help.Descripcion=It is accepting 24 hours Contact Us
-lang.help.name=Name
-lang.help.necessary1=Required
-lang.help.street_address=Street Address
-lang.help.mail=Mail
-lang.help.necessary2=Required
-lang.help.category=Category
-lang.help.necessary3=Required
-lang.help.comment=Comment
-lang.help.necessary4=Required
-lang.help.send=Send
-
-
-struts.ui.theme=simple
+lang.help.title=\u30D8\u30EB\u30D7\uFF1A\u304A\u554F\u3044\u5408\u308F\u305B\u65B9\u6CD5
+lang.help.helpservice=\u30D8\u30EB\u30D7\uFF06\u30AB\u30B9\u30BF\u30DE\u30FC\u30B5\u30FC\u30D3\u30B9
+lang.help.howtoask=\u304A\u554F\u3044\u5408\u308F\u305B\u65B9\u6CD5
+lang.help.24houravailable=\u30AB\u30B9\u30BF\u30DE\u30FC\u30B5\u30FC\u30D3\u30B9\u3067\u306F24\u6642\u9593\u304A\u554F\u3044\u5408\u308F\u305B\u3092\u627F\u3063\u3066\u304A\u308A\u307E\u3059\u3002
+lang.help.youcanaskusthisway=\u4EE5\u4E0B\u306E\u624B\u9806\u3067\u304A\u554F\u3044\u5408\u308F\u305B\u3044\u305F\u3060\u304F\u3068\u3001\u304A\u5BA2\u69D8\u306E\u30A2\u30AB\u30A6\u30F3\u30C8\u60C5\u5831
+lang.help.canretreateasy=\u306A\u3069\u3092\u3059\u3050\u306B\u78BA\u8A8D\u3067\u304D\u308B\u305F\u3081\u3001\u30B9\u30E0\u30FC\u30BA\u306A\u3054\u5BFE\u5FDC\u304C\u53EF\u80FD\u3067\u3059\u3002
+lang.help.name=\u6C0F\u540D
+lang.help.necessary=(\u5FC5\u9808)
+lang.help.streetaddress=\u4F4F\u6240
+lang.help.symbol=\u3012
+lang.help.addressex=\u4F8B)\u6771\u4EAC\u90FD\u5343\u4EE3\u7530\u533A\uFF5E
+lang.help.mail=\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
+lang.help.typeagain=\u78BA\u8A8D\u306E\u305F\u3081\u518D\u5EA6\u5165\u529B
+lang.help.askcategory=\u304A\u554F\u3044\u5408\u308F\u305B\u7A2E\u985E
+lang.help.account=\u30A2\u30AB\u30A6\u30F3\u30C8\u306B\u3064\u3044\u3066
+lang.help.howtopay=\u304A\u652F\u6255\u3044\u65B9\u6CD5\u306B\u3064\u3044\u3066
+lang.help.ordercontent=\u6CE8\u6587\u5185\u5BB9\u306B\u3064\u3044\u3066
+lang.help.other=\u305D\u306E\u4ED6
+lang.help.askdetail= \u304A\u554F\u304
