--- a/src/com/internousdev/kairakutenichiba/property/helplink_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/helplink_ja.properties
@@ -1,5 +1,3 @@
-lang.help.title=ヘルプ＆カスタマーサービス
-lang.help.a=送信されました。
-lang.help.b=送信されませんでした。
-
-struts.ui.theme=simple
+lang.helplink.title=\u30D8\u30EB\u30D7\uFF1A\u304A\u554F\u3044\u5408\u308F\u305B
+lang.helplink.success=\u9001\u4FE1\u3055\u308C\u307E\u3057\u305F\u3002
+lang.helplink.error=\u9001\u4FE1\u3055\u308C\u307E\u305B\u3093\u3067\u3057\u305F\u3002
