・properties_enの存在しない者を作成。英訳されてないものを英訳。・header.jspのログイン、ログアウトで表示させるものを変化させた。

--- a/src/com/internousdev/kairakutenichiba/property/header_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/header_ja.properties
@@ -3,3 +3,4 @@ lang.header.login=\u30ED\u30B0\u30A4\u30F3
 lang.header.mypage=\u30DE\u30A4\u30DA\u30FC\u30B8
 lang.header.cart=\u30AB\u30FC\u30C8
 lang.header.help=\u30D8\u30EB\u30D7
+lang.header.logout=\u30ED\u30B0\u30A2\u30A6\u30C8
