決済のために多数変更。check_shoji.jspを表示する部分。荘司。

--- a/src/com/internousdev/kairakutenichiba/property/check_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/check_en.properties
@@ -3,13 +3,12 @@ lang.check.check=Check item you want to buy
 lang.check.goodsname=Item name
 lang.check.value=Price
 lang.check.quantitiy=Quantitiy
+lang.check.subtotal=Subtotal
+lang.check.total=Total
 lang.check.payment=How to pay
-lang.check.cardexample=VISA  \u30AB\u30FC\u30C9\u756A\u53F7 **** **** **** 1234
 lang.check.deliver=How to deliver
-lang.check.kuroneko=BLACKCAT
-lang.check.address=Street Address
-lang.check.addressex=example
+lang.check.time=Derivery Time
 lang.check.decision=Order Confirmation
-lang.check.notfinish=not done
+lang.check.notfinish=        not done
 lang.check.backtocart=Back to cart
 lang.check.backtoselect=Back to how to pay
