--- a/src/com/internousdev/kairakutenichiba/property/check_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/check_ja.properties
@@ -3,13 +3,12 @@ lang.check.check=\u8CFC\u5165\u5185\u5BB9\u306E\u78BA\u8A8D
 lang.check.goodsname=\u5546\u54C1\u540D
 lang.check.value=\u4FA1\u683C
 lang.check.quantitiy=\u6570\u91CF
+lang.check.subtotal=\u5C0F\u8A08
+lang.check.total=\u5408\u8A08
 lang.check.payment=\u304A\u652F\u6255\u3044\u65B9\u6CD5
-lang.check.cardexample=VISA(\u30ED\u30B4) \u30AB\u30FC\u30C9\u756A\u53F7 **** **** **** 1234
 lang.check.deliver=\u914D\u9001\u65B9\u6CD5
-lang.check.kuroneko=\u30AF\u30ED\u30CD\u30B3\u30E4\u30DE\u30C8
-lang.check.address=\u304A\u5C4A\u3051\u5148\u4F4F\u6240
-lang.check.addressex=\u6771\u4EAC\u90FDA\u533AB 1-2-3\u3000\u5C71\u7530\u8358101
+lang.check.time=\u304A\u5C4A\u3051\u65E5\u6642
 lang.check.decision=\u6CE8\u6587\u3092\u78BA\u5B9A\u3059\u308B
-lang.check.notfinish=*\u8CFC\u5165\u624B\u7D9A\u304D\u3055\u308C\u307E\u305B\u3093
+lang.check.notfinish=\u3000\u3000\u3000*\u8CFC\u5165\u624B\u7D9A\u304D\u3055\u308C\u307E\u305B\u3093
 lang.check.backtocart=\u30AB\u30FC\u30C8\u3078\u623B\u308B
 lang.check.backtoselect=\u652F\u6255\u3044\u65B9\u6CD5\u306E\u9078\u629E\u3078\u623B\u308B
