--- a/src/com/internousdev/kairakutenichiba/property/adminhelp_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/adminhelp_ja.properties
@@ -1,12 +1,19 @@
-lang.adminhelp.topTitle=\u691C\u7D22\u3057\u305F\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-lang.adminhelp.helplist=\u304A\u554F\u3044\u5408\u308F\u305B\u4E00\u89A7
-lang.adminhelp.name=\u6C0F\u540D
-lang.adminhelp.mail=\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
-lang.adminhelp.category=\u7A2E\u985E
-lang.adminhelp.content=\u5185\u5BB9
-lang.adminhelp.samplename=\u5C71\u7530(\u4EEE)
-lang.adminhelp.samplemail=sample@gmail.com
-lang.adminhelp.account=\u30A2\u30AB\u30A6\u30F3\u30C8\u306B\u3064\u3044\u3066
-lang.adminhelp.cannotlogin=\u30ED\u30B0\u30A4\u30F3\u3067\u304D\u306A\u304F\u306A\u3063\u3066\u3057\u307E\u3063\u305F
-lang.adminhelp.sample=null
-lang.adminhelp.detail=\u8A73\u7D30
+lang.adminhelp.topTitle = ヘルプ＆問い合わせ
+lang.adminhelp.h1title = お問い合わせ履歴
+lang.adminhelp.enterName = 氏名検索
+lang.adminhelp.all = 全件表示
+lang.adminhelp.sortNew = 降順
+lang.adminhelp.sortOld = 昇順
+lang.adminhelp.search = 検索
+lang.adminhelp.userName = 氏名
+lang.adminhelp.userMail = メールアドレス
+lang.adminhelp.category = 問い合わせ種類
+lang.help.account = アカウントについて
+lang.adminhelp.howtopay = 支払い方法について
+lang.help.ordercontent = 注文内容について
+lang.adminhelp.other = その他
+lang.adminhelp.dt = 問い合わせ日時
+lang.adminhelp.comment = 問い合わせ内容
+lang.adminhelp.display = 表示
+lang.adminhelp.Hits = 検索
+lang.adminhelp.page = ページ
