--- a/src/com/internousdev/kairakutenichiba/property/help_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/help_ja.properties
@@ -17,3 +17,4 @@ lang.help.howtopay=\u304A\u652F\u6255\u3044\u65B9\u6CD5\u306B\u3064\u3044\u3066
 lang.help.ordercontent=\u6CE8\u6587\u5185\u5BB9\u306B\u3064\u3044\u3066
 lang.help.other=\u305D\u306E\u4ED6
 lang.help.askdetail= \u304A\u554F\u3044\u5408\u308F\u305B\u5185\u5BB9
+lang.help.return=送信
