--- a/src/com/internousdev/kairakutenichiba/property/help_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/help_en.properties
@@ -12,9 +12,9 @@ lang.help.addressex=\u4F8B)\u6771\u4EAC\u90FD\u5343\u4EE3\u7530\u533A\uFF5E
 lang.help.mail=\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
 lang.help.typeagain=\u78BA\u8A8D\u306E\u305F\u3081\u518D\u5EA6\u5165\u529B
 lang.help.askcategory=\u304A\u554F\u3044\u5408\u308F\u305B\u7A2E\u985E
-lang.help.account=\u30A2\u30AB\u30A6\u30F3\u30C8\u306B\u3064\u3044\u3066
+lang.help.account=about account
 lang.help.howtopay=\u304A\u652F\u6255\u3044\u65B9\u6CD5\u306B\u3064\u3044\u3066
-lang.help.ordercontent=\u6CE8\u6587\u5185\u5BB9\u306B\u3064\u3044\u3066
+lang.help.ordercontent=ordercontent
 lang.help.other=\u305D\u306E\u4ED6
 lang.help.askdetail= \u304A\u554F\u304
 lang.help.return=send
