LogoutDAOでloginflgをfalseに書き換えられてなかったのをできるよう変更。

--- a/src/com/internousdev/kairakutenichiba/property/login_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/login_en.properties
@@ -1,3 +1,6 @@
 lang.login.title= LOGIN PAGE
 lang.login.logintitle= MEMBER LOGIN
 lang.login.login= LOGIN
+
+lang.login.mail= E-Mail:
+lang.login.password=Password:
