--- a/src/com/internousdev/kairakutenichiba/property/adminhelp_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/adminhelp_ja.properties
@@ -1,18 +1,18 @@
-lang.adminhelp.topTitle = \u5FEB\u697D\u5E97\u5E02\u5834\u3000\u304A\u554F\u3044\u5408\u308F\u305BÅõ
+lang.adminhelp.topTitle = \u5FEB\u697D\u5E97\u5E02\u5834\u3000\u304A\u554F\u3044\u5408\u308F\u305B
 lang.adminhelp.h1title = \u554F\u3044\u5408\u308F\u305B\u5C65\u6B74
 lang.adminhelp.enterName = \u6C0F\u540D\u3067\u691C\u7D22
 lang.adminhelp.all = \u5168\u3066
-lang.adminhelp.sortNew = \u964D\u9806Ü
-lang.adminhelp.sortOld = \u6607\u9806Ü
+lang.adminhelp.sortNew = \u964D\u9806
+lang.adminhelp.sortOld = \u6607\u9806
 lang.adminhelp.search = \u691C\u7D22
-lang.adminhelp.userName = \u6C0F\u540Dêç
+lang.adminhelp.userName = \u6C0F\u540D
 lang.adminhelp.userMail = \u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
-lang.adminhelp.category = \u554F\u3044\u5408\u308F\u305B\u7A2E\u985Eû
-lang.help.account = \u30A2\u30AB\u30A6\u30F3\u30C8\u306B\u3064\u3044\u3066
+lang.adminhelp.category = \u554F\u3044\u5408\u308F\u305B\u7A2E\u985E
+lang.adminhelp.acount = \u30A2\u30AB\u30A6\u30F3\u30C8\u306B\u3064\u3044\u3066
 lang.adminhelp.howtopay = \u652F\u6255\u3044\u65B9\u6CD5\u306B\u3064\u3044\u3066
-lang.help.ordercontent = \u6CE8\u6587\u5185\u5BB9\u306B\u3064\u3044\u3066
-lang.adminhelp.other = \u305D\u306E\u4ED6ñ
-lang.adminhelp.dt = \u554F\u3044\u5408\u308F\u305B\u65E5\u6642ôÇ
+lang.adminhelp.ordercontent =
+lang.adminhelp.other = \u305D\u306E\u4ED6
+lang.adminhelp.dt = \u554F\u3044\u5408\u308F\u305B\u65E5\u6642
 lang.adminhelp.comment = \u554F\u3044\u5408\u308F\u305B\u5185\u5BB9
 lang.adminhelp.display = \u691C\u7D22\u7D50\u679C\u3092\u8868\u793A
 lang.adminhelp.Hits = \u691C\u7D22\u7D50\u679C
