login.jsp,css,properties 修正

--- a/src/com/internousdev/kairakutenichiba/property/login_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/login_en.properties
@@ -2,5 +2,5 @@ lang.login.title= LOGIN PAGE
 lang.login.logintitle= MEMBER LOGIN
 lang.login.login= LOGIN
 
-lang.login.mail= E-Mail:
-lang.login.password=Password:
+lang.login.mail=\u3000\u3000E-Mail
+lang.login.password=Password
