--- a/src/com/internousdev/kairakutenichiba/property/login_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/login_ja.properties
@@ -2,6 +2,6 @@ lang.login.title=\u4F1A\u54E1\u30ED\u30B0\u30A4\u30F3
 lang.login.logintitle=\u5FEB\u697D\u5929\u4F1A\u54E1\u30ED\u30B0\u30A4\u30F3
 lang.login.login=\u30ED\u30B0\u30A4\u30F3
 
-lang.login.mail= E-mail:
-lang.login.password=Password:
+lang.login.mail=\u3000\u3000Email
+lang.login.password=Password
 
