payment.jspからcheck.jspへ遷移できるようにした

--- a/src/com/internousdev/kairakutenichiba/property/paymenterror_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/paymenterror_ja.properties
@@ -4,3 +4,4 @@ lang.paymenterror.year=\u671F\u9650\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3
 lang.paymenterror.month=\u671F\u9650\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 lang.paymenterror.number=\u30AB\u30FC\u30C9\u756A\u53F7\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 lang.paymenterror.name=\u30AB\u30FC\u30C9\u540D\u7FA9\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+lang.paymenterror.payment=\u30AF\u30EC\u30B8\u30C3\u30C8\u30AB\u30FC\u30C9\u60C5\u5831\u5165\u529B\u3078\u623B\u308B
