ItemのPriceをintで取得して表示。

--- a/src/com/internousdev/kairakutenichiba/property/detail_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/detail_en.properties
@@ -1,5 +1,6 @@
 lang.detail.title=ItemDetail
 lang.detail.price=Price
+lang.detail.yen=yen
 lang.detail.baseinfo=ItemBaseInformation
 lang.detail.dayonsale=Sale day   :
 lang.detail.author=Author   :
