--- a/src/com/internousdev/kairakutenichiba/property/detail_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/detail_ja.properties
@@ -1,5 +1,6 @@
 lang.detail.title=\u5546\u54C1\u8A73\u7D30
 lang.detail.price=\u4FA1\u683C
+lang.detail.yen=\u5186
 lang.detail.baseinfo=\u5546\u54C1\u57FA\u672C\u60C5\u5831
 lang.detail.dayonsale=\u767A\u58F2\u65E5\u3000\u3000\uFF1A
 lang.detail.author=\u8457\u8005\u3000\u3000\u3000\uFF1A
