--- a/src/com/internousdev/kairakutenichiba/property/adminheader_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/adminheader_ja.properties
@@ -1,5 +1,5 @@
 lang.adminheader.btn = \u30c8\u30c3\u30d7
-lang.adminheader.userbtn = \u9867\u5ba2\u60c5\u5831
+lang.adminheader.userbtn = \u30E6\u30FC\u30B6\u30FC\u60C5\u5831
 lang.adminheader.historybtn = \u8ca9\u58f2\u5c65\u6b74
 lang.adminheader.Itembtn = \u5546\u54c1\u7ba1\u7406
 lang.adminheader.customerbtn = \u304A\u554F\u3044\u5408\u308F\u305B
