--- a/src/com/internousdev/kairakutenichiba/property/adminhelp_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/adminhelp_ja.properties
@@ -10,7 +10,7 @@ lang.adminhelp.userMail = \u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
 lang.adminhelp.category = \u554F\u3044\u5408\u308F\u305B\u7A2E\u985E
 lang.adminhelp.acount = \u30A2\u30AB\u30A6\u30F3\u30C8\u306B\u3064\u3044\u3066
 lang.adminhelp.howtopay = \u652F\u6255\u3044\u65B9\u6CD5\u306B\u3064\u3044\u3066
-lang.adminhelp.ordercontent =
+lang.adminhelp.ordercontent =\u6CE8\u6587\u5185\u5BB9\u306B\u3064\u3044\u3066
 lang.adminhelp.other = \u305D\u306E\u4ED6
 lang.adminhelp.dt = \u554F\u3044\u5408\u308F\u305B\u65E5\u6642
 lang.adminhelp.comment = \u554F\u3044\u5408\u308F\u305B\u5185\u5BB9
