購入内容確認ページに送料を表示。荘司。

--- a/src/com/internousdev/kairakutenichiba/property/check_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/check_en.properties
@@ -12,3 +12,6 @@ lang.check.decision=Order Confirmation
 lang.check.notfinish=        not done
 lang.check.backtocart=Back to cart
 lang.check.backtoselect=Back to how to pay
+lang.check.fee=Fee
+lang.check.quantities=
+lang.check.yen=yen
