--- a/src/com/internousdev/kairakutenichiba/property/check_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/check_ja.properties
@@ -12,3 +12,6 @@ lang.check.decision=\u6CE8\u6587\u3092\u78BA\u5B9A\u3059\u308B
 lang.check.notfinish=\u3000\u3000\u3000*\u8CFC\u5165\u624B\u7D9A\u304D\u3055\u308C\u307E\u305B\u3093
 lang.check.backtocart=\u30AB\u30FC\u30C8\u3078\u623B\u308B
 lang.check.backtoselect=\u652F\u6255\u3044\u65B9\u6CD5\u306E\u9078\u629E\u3078\u623B\u308B
+lang.check.fee=\u9001\u6599
+lang.check.quantities=\u518A
+lang.check.yen=\u5186
