index.jsp軽微な修正　adminitem国際化追記

--- a/src/com/internousdev/kairakutenichiba/property/adminitem_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/adminitem_en.properties
@@ -3,8 +3,8 @@ lang.adminitem.head= Items Management
 lang.adminitem.order= Type Item Name
 lang.adminitem.sarch= Search
 lang.adminitem.all= List All matters
-lang.adminitem.add= Add Item 
-lang.adminitem.id= Item ID
+lang.adminitem.add= Add Item
+lang.adminitem.itemid= Item ID
 lang.adminitem.name= Item Name
 lang.adminitem.price= Price
 lang.adminitem.stocks= Stocks
@@ -19,3 +19,11 @@ lang.adminitem.del= Delete
 lang.adminitem.detail=Item Detail
 lang.adminitem.number= Display numbers
 lang.adminitem.h2=List Items
+lang.adminitem.release=Release day
+lang.adminitem.author=Author
+lang.adminitem.publisher=The Publisher
+lang.adminitem.publicationform=Publication form
+lang.adminitem.pages=number of pages
+lang.adminitem.isbncode=ISBN code
+lang.adminitem.itemdetails=Product Details
+lang.adminitem.signup=Sign up
