--- a/src/com/internousdev/kairakutenichiba/property/adminitem_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/adminitem_ja.properties
@@ -4,7 +4,7 @@ lang.adminitem.order= \u5546\u54C1\u540D\u3092\u5165\u529B
 lang.adminitem.sarch= \u691C\u7D22
 lang.adminitem.all= \u5168\u4EF6\u8868\u793A
 lang.adminitem.add= \u5546\u54C1\u8FFD\u52A0
-lang.adminitem.id= \u5546\u54C1ID
+lang.adminitem.itemid= \u5546\u54C1ID
 lang.adminitem.name= \u5546\u54C1\u540D
 lang.adminitem.price= \u5358\u4FA1
 lang.adminitem.stocks= \u5728\u5EAB\u6570
@@ -19,3 +19,11 @@ lang.adminitem.del= \u524A\u9664
 lang.adminitem.detail= \u5546\u54C1\u8A73\u7D30
 lang.adminitem.number= \u8868\u793A\u4EF6\u6570\uFF1A
 lang.adminitem.h2=\u5546\u54C1\u4E00\u89A7
+lang.adminitem.release=\u767A\u58F2\u65E5
+lang.adminitem.author=\u8457\u8005
+lang.adminitem.publisher=\u51FA\u7248\u793E
+lang.adminitem.publicationform=\u51FA\u7248\u5F62\u614B
+lang.adminitem.pages=\u30DA\u30FC\u30B8\u6570
+lang.adminitem.isbncode=ISBN\u30B3\u30FC\u30C9
+lang.adminitem.itemdetails=\u5546\u54C1\u8A73\u7D30
+lang.adminitem.signup=\u65B0\u898F\u767B\u9332
