--- a/src/com/internousdev/kairakutenichiba/property/cart_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/cart_en.properties
@@ -7,7 +7,7 @@ lang.cart.message=The following items are located in the shopping basket
 lang.cart.message2=You have no items in your shopping basket
 lang.cart.item_name=Item Name
 lang.cart.price=Price
-lang.cart.count=quantity(min:0 max:5)
+lang.cart.count=quantity
 lang.cart.subtotal=Subtotal
 lang.cart.yen=Yen
 lang.cart.total=Total
