--- a/src/com/internousdev/kairakutenichiba/property/admincustomer_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/admincustomer_en.properties
@@ -1,12 +1,12 @@
-lang.admincustomer.topTitle = Customer Infromation Manegement Page
-lang.admincustomer.h1title = Customer Infromation Manegement Page
+lang.admincustomer.topTitle = Customer Information Manegement Page
+lang.admincustomer.h1title = Customer Information Manegement Page
 lang.admincustomer.id = User ID
 lang.admincustomer.userName = Name
 lang.admincustomer.password = Password
 lang.admincustomer.email = Mail Address
 lang.admincustomer.PhoneNumber=PhoneNumber
 lang.admincustomer.postal = Postal Number
-lang.admincustomer.streetaddress = Strret Address
+lang.admincustomer.streetaddress = Street Address
 lang.admincustomer.dt = Registration day
 lang.admincustomer.update = Last Uptodate day
 lang.admincustomer.Sex= Sex
