認証エラーページを修正。

--- a/src/com/internousdev/kairakutenichiba/property/paymenterror_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/paymenterror_en.properties
@@ -1,6 +1,2 @@
 lang.paymenterror.title=Certification Error
-lang.paymenterror.securitycode=Your securitycode is not correct
-lang.paymenterror.year=Your ExpirationYear is not correct
-lang.paymenterror.month=Your ExpirationMonth is not correct
-lang.paymenterror.number=Your CardNumber is not correct
-lang.paymenterror.name=Your CardName is not correct
+lang.paymenterror.securitycode=Error. Please Check Your Card.
