--- a/src/com/internousdev/kairakutenichiba/property/paymenterror_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/paymenterror_ja.properties
@@ -1,7 +1,2 @@
 lang.paymenterror.title=\u8A8D\u8A3C\u30A8\u30E9\u30FC
-lang.paymenterror.securitycode=\u30BB\u30AD\u30E5\u30EA\u30C6\u30A3\u30B3\u30FC\u30C9\u304C\u9593\u9055\u3063\u3066\u3044\u307E\u3059\u3002
-lang.paymenterror.year=\u671F\u9650\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-lang.paymenterror.month=\u671F\u9650\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-lang.paymenterror.number=\u30AB\u30FC\u30C9\u756A\u53F7\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-lang.paymenterror.name=\u30AB\u30FC\u30C9\u540D\u7FA9\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-lang.paymenterror.payment=\u30AF\u30EC\u30B8\u30C3\u30C8\u30AB\u30FC\u30C9\u60C5\u5831\u5165\u529B\u3078\u623B\u308B
+lang.paymenterror.securitycode=\u8A8D\u8A3C\u30A8\u30E9\u30FC
