check.jsp css 表示位置修正　国際化足りてない所補足

--- a/src/com/internousdev/kairakutenichiba/property/check_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/check_ja.properties
@@ -15,3 +15,4 @@ lang.check.backtoselect=\u652F\u6255\u3044\u65B9\u6CD5\u306E\u9078\u629E\u3078\u
 lang.check.fee=\u9001\u6599
 lang.check.quantities=\u518A
 lang.check.yen=\u5186
+lang.check.determine=\u6CE8\u6587\u3092\u78BA\u5B9A\u3059\u308B
