--- a/src/com/internousdev/kairakutenichiba/property/check_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/check_en.properties
@@ -13,5 +13,6 @@ lang.check.notfinish=        not done
 lang.check.backtocart=Back to cart
 lang.check.backtoselect=Back to how to pay
 lang.check.fee=Fee
-lang.check.quantities=
+lang.check.quantities=book
 lang.check.yen=yen
+lang.check.determine=Confirm order
