payment.jsp detail.jsp国際化修正

--- a/src/com/internousdev/kairakutenichiba/property/detail_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/detail_en.properties
@@ -8,3 +8,4 @@ lang.detail.company=Publisher   :
 lang.detail.waytopublish=Publication form   :
 lang.detail.page=Page   :
 lang.detail.ISBNcode=ISBN code   :
+lang.detail.addcart=Add to Cart
