--- a/src/com/internousdev/kairakutenichiba/property/detail_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/detail_ja.properties
@@ -1,10 +1,11 @@
-lang.detail.title=\u5546\u54C1\u8A73\u7D30
-lang.detail.price=\u4FA1\u683C
+lang.detail.title=\u5546\u54c1\u8a73\u7d30
+lang.detail.price=\u4fa1\u683c
 lang.detail.yen=\u5186
-lang.detail.baseinfo=\u5546\u54C1\u57FA\u672C\u60C5\u5831
-lang.detail.dayonsale=\u767A\u58F2\u65E5\u3000\u3000\uFF1A
-lang.detail.author=\u8457\u8005\u3000\u3000\u3000\uFF1A
-lang.detail.company=\u51FA\u7248\u793E\u3000\u3000\uFF1A
-lang.detail.waytopublish=\u767A\u884C\u5F62\u614B\u3000\uFF1A
-lang.detail.page=\u30DA\u30FC\u30B8\u6570\u3000\uFF1A
-lang.detail.ISBNcode=ISBN\u30B3\u30FC\u30C9\uFF1A
+lang.detail.baseinfo=\u5546\u54c1\u57fa\u672c\u60c5\u5831
+lang.detail.dayonsale=\u767a\u58f2\u65e5\u3000\u3000\uff1a
+lang.detail.author=\u8457\u8005\u3000\u3000\u3000\uff1a
+lang.detail.company=\u51fa\u7248\u793e\u3000\u3000\uff1a
+lang.detail.waytopublish=\u767a\u884c\u5f62\u614b\u3000\uff1a
+lang.detail.page=\u30da\u30fc\u30b8\u6570\u3000\uff1a
+lang.detail.ISBNcode=ISBN\u30b3\u30fc\u30c9\uff1a
+lang.detail.addcart=\u5546\u54c1\u3092\u30ab\u30fc\u30c8\u306b\u8ffd\u52a0
