--- a/src/com/internousdev/kairakutenichiba/property/payment_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/payment_en.properties
@@ -16,3 +16,14 @@ lang.payment.date=Select Delivery date [Required]
 lang.payment.time=Select Delivery time[Required]
 lang.payment.bike=Home Delivery
 lang.payment.mail=Mail service
+lang.payment.month=month/
+lang.payment.year=year
+lang.payment.dateselection=Date Selection
+lang.payment.nondesignation=Non Designation
+lang.payment.am=AM
+lang.payment.time1=0:00pm-2:00pm
+lang.payment.time2=2:00pm-4:00pm
+lang.payment.time3=4:00pm-6:00pm
+lang.payment.time4=6:00pm-8:00pm
+lang.payment.time5=8:00pm-9:00pm
+lang.payment.message=Content Confirmation
