--- a/src/com/internousdev/kairakutenichiba/property/payment_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/payment_ja.properties
@@ -1,18 +1,29 @@
-lang.payment.paymentScreen=\u304A\u652F\u6255\u3044\u753B\u9762
-lang.payment.cardinfo=\u30AB\u30FC\u30C9\u60C5\u5831\u306E\u5165\u529B
-lang.payment.attention=\u304A\u652F\u6255\u3044\u65B9\u6CD5\u306F\u30AF\u30EC\u30B8\u30C3\u30C8\u30AB\u30FC\u30C9\u306E\u307F\u3068\u306A\u308A\u307E\u3059\u3002
-lang.payment.security=\u30BB\u30AD\u30E5\u30EA\u30C6\u30A3\u30FC\u30B3\u30FC\u30C9 \uFF3B\u5FC5\u9808\uFF3D
-lang.payment.cardDeadline=\u6709\u52B9\u671F\u9650\u3000\uFF3B\u5FC5\u9808
-lang.payment.cardHolder=\u30AB\u30FC\u30C9\u540D\u7FA9(\u30ED\u30FC\u30DE\u5B57)\u3000\uFF3B\u5FC5\u9808\uFF3D
-lang.payment.cardNumber=\u30AB\u30FC\u30C9\u756A\u53F7\u3000\uFF3B\u5FC5\u9808\uFF3D
-lang.payment.cardType= \u30AB\u30FC\u30C9\u4F1A\u793E\u306E\u9078\u629E \u3000\uFF3B\u5FC5\u9808\uFF3D
+lang.payment.paymentScreen=\u304a\u652f\u6255\u3044\u753b\u9762
+lang.payment.cardinfo=\u30ab\u30fc\u30c9\u60c5\u5831\u306e\u5165\u529b
+lang.payment.attention=\u304a\u652f\u6255\u3044\u65b9\u6cd5\u306f\u30af\u30ec\u30b8\u30c3\u30c8\u30ab\u30fc\u30c9\u306e\u307f\u3068\u306a\u308a\u307e\u3059\u3002
+lang.payment.security=\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30fc\u30b3\u30fc\u30c9 \uff3b\u5fc5\u9808\uff3d
+lang.payment.cardDeadline=\u6709\u52b9\u671f\u9650\u3000\uff3b\u5fc5\u9808
+lang.payment.cardHolder=\u30ab\u30fc\u30c9\u540d\u7fa9(\u30ed\u30fc\u30de\u5b57)\u3000\uff3b\u5fc5\u9808\uff3d
+lang.payment.cardNumber=\u30ab\u30fc\u30c9\u756a\u53f7\u3000\uff3b\u5fc5\u9808\uff3d
+lang.payment.cardType= \u30ab\u30fc\u30c9\u4f1a\u793e\u306e\u9078\u629e \u3000\uff3b\u5fc5\u9808\uff3d
 
-lang.payment.attention=\u534A\u89D2\u30AB\u30CA\u30FB\u5168\u89D2\u82F1\u6570\u6587\u5B57\u306F\u3001\u4F7F\u7528\u3057\u306A\u3044\u3067\u304F\u3060\u3055\u3044\u3002
-lang.payment.howtopay=\u304A\u652F\u6255\u3044\u65B9\u6CD5\u306F\u30AF\u30EC\u30B8\u30C3\u30C8\u30AB\u30FC\u30C9\u306E\u307F\u3068\u306A\u308A\u307E\u3059\u3002
-lang.payment.deliverselect=\u914D\u9054\u65B9\u6CD5\u306E\u9078\u629E
-lang.payment.deliver=\u914D\u9001\u65B9\u6CD5\uFF3B\u5FC5\u9808\uFF3D
-lang.payment.delivercost=\u914D\u9001\u6599\u91D1\u30FB\u30FB\u30FB\u5B85\u914D\u4FBF500\u5186(\u7A0E\u8FBC)\u3000\u30E1\u30FC\u30EB\u4FBF200\u5186(\u7A0E\u8FBC)
-lang.payment.date=\u304A\u5C4A\u3051\u65E5\u6307\u5B9A\uFF3B\u5FC5\u9808\uFF3D
-lang.payment.time=\u304A\u5C4A\u3051\u6642\u9593\u6307\u5B9A\uFF3B\u5FC5\u9808\uFF3D
-lang.payment.bike=\u5B85\u914D\u4FBF
-lang.payment.mail=\u30E1\u30FC\u30EB\u4FBF
+lang.payment.attention=\u534a\u89d2\u30ab\u30ca\u30fb\u5168\u89d2\u82f1\u6570\u6587\u5b57\u306f\u3001\u4f7f\u7528\u3057\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
+lang.payment.howtopay=\u304a\u652f\u6255\u3044\u65b9\u6cd5\u306f\u30af\u30ec\u30b8\u30c3\u30c8\u30ab\u30fc\u30c9\u306e\u307f\u3068\u306a\u308a\u307e\u3059\u3002
+lang.payment.deliverselect=\u914d\u9054\u65b9\u6cd5\u306e\u9078\u629e
+lang.payment.deliver=\u914d\u9001\u65b9\u6cd5\uff3b\u5fc5\u9808\uff3d
+lang.payment.delivercost=\u914d\u9001\u6599\u91d1\u30fb\u30fb\u30fb\u5b85\u914d\u4fbf500\u5186(\u7a0e\u8fbc)\u3000\u30e1\u30fc\u30eb\u4fbf200\u5186(\u7a0e\u8fbc)
+lang.payment.date=\u304a\u5c4a\u3051\u65e5\u6307\u5b9a\uff3b\u5fc5\u9808\uff3d
+lang.payment.time=\u304a\u5c4a\u3051\u6642\u9593\u6307\u5b9a\uff3b\u5fc5\u9808\uff3d
+lang.payment.bike=\u5b85\u914d\u4fbf
+lang.payment.mail=\u30e1\u30fc\u30eb\u4fbf
+lang.payment.month=\u6708/
+lang.payment.year=\u5e74
+lang.payment.dateselection=\u65e5\u4ed8\u3092\u9078\u629e
+lang.payment.nondesignation=\u6307\u5b9a\u306a\u3057
+lang.payment.am=\u5348\u524d\u4e2d
+lang.payment.time1=12\u6642~14\u6642
+lang.payment.time2=14\u6642~16\u6642
+lang.payment.time3=16\u6642~18\u6642
+lang.payment.time4=18\u6642~20\u6642
+lang.payment.time5=20\u6642~21\u6642
+lang.payment.message=\u5185\u5bb9\u78ba\u8a8d
