支払い方法の選択でバグ出してたので修正。

--- a/src/com/internousdev/kairakutenichiba/property/paymenterror_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/paymenterror_en.properties
@@ -1,2 +1,3 @@
 lang.paymenterror.title=Certification Error
 lang.paymenterror.securitycode=Error. Please Check Your Card.
+lang.paymenterror.payment=Back to Payment page
