--- a/src/com/internousdev/kairakutenichiba/property/paymenterror_ja.properties
+++ b/src/com/internousdev/kairakutenichiba/property/paymenterror_ja.properties
@@ -1,2 +1,3 @@
 lang.paymenterror.title=\u8A8D\u8A3C\u30A8\u30E9\u30FC
 lang.paymenterror.securitycode=\u8A8D\u8A3C\u30A8\u30E9\u30FC
+lang.paymenterror.payment=\u652F\u6255\u3044\u65B9\u6CD5\u306E\u9078\u629E\u753B\u9762\u3078\u623B\u308B
