--- a/src/com/internousdev/kairakutenichiba/property/payment_en.properties
+++ b/src/com/internousdev/kairakutenichiba/property/payment_en.properties
@@ -11,7 +11,7 @@ lang.payment.attention=Don't use except Alphabet
 lang.payment.howtopay=Only CreditCard is available
 lang.payment.deliverselect=Select delivery choice
 lang.payment.deliver=Select delivery choice [Required]
-lang.payment.delivercost=Delevery Price :Home Delivery-5$	Mail service-3$ [Required]
+lang.payment.delivercost=Delevery Price :Home Delivery-500yen	Mail service-300yen [Required]
 lang.payment.date=Select Delivery date [Required]
 lang.payment.time=Select Delivery time[Required]
 lang.payment.bike=Home Delivery
